--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,10 @@ h1 {
 a {
   text-decoration: none;
 }
-
+.error{
+	color:red;
+	margin:10px 0 10px 0;
+}
 /* ================================= 
   Form Element Styles
 ==================================== */
